# SharpnessAssess

./: CMakeLists.txt  README.md  listsM.txt  listsQ.txt  main.cpp
